--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 body {
+  background-image: url("/w1.png");
+  background-size: cover;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -11,3 +16,66 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+i{
+  cursor: pointer;
+}
+i:hover{
+     color: silver;
+}
+
+.hey{
+  text-align: center;
+  font-family: cursive;
+}
+
+.form-label{
+  font-family: emoji;
+}
+
+.borderx{
+  border: 1px solid;
+}
+
+.width{
+  /* width: 800px; */
+  background-color: #e7f5fb;
+  /* margin-left: 777px; */
+  border: 1px solid;
+  max-width: 100%;
+  /* display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: flex-start;
+  height: 100vh; */
+} 
+h2{
+  font-family: emoji;
+}
+
+.i{
+  color: white;
+}
+
+.login{
+  max-width: 555px;
+  max-height: 777px;
+  background-color: #e7f5fb;
+  border: 1px solid;
+}
+
+.font{
+  font-family: sans-serif;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #212529;
+  padding: 20px 0;
+  text-align: center;
+  padding: 10px;
+}
+
