--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -39,7 +39,7 @@ i:hover{
 
 .width{
   /* width: 800px; */
-  background-color: #e7f5fb;
+  background-color: #a0b5be;
   /* margin-left: 777px; */
   border: 1px solid;
   max-width: 100%;
@@ -60,7 +60,7 @@ h2{
 .login{
   max-width: 555px;
   max-height: 777px;
-  background-color: #e7f5fb;
+  background-color: #a0b5be;
   border: 1px solid;
 }
 
