--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("/w1.png");
+  background-image: url("/public/w1.png");
   background-size: cover;
   height: 100vh;
   background-repeat: no-repeat;
